<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/mapa" />

        <item
            android:id="@+id/menu_filtros"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/filtrosRuta"/>

        <item
            android:id="@+id/menu_addRuta"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/addruta" />

        <item
            android:id="@+id/menu_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/info" />

    </group>

    <item android:title="@string/otrasopciones">
        <menu>


            <item
                android:id="@+id/menu_tiempoAct"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/tiempohoy" />
            <item
                android:id="@+id/menu_registro"
                android:icon="@android:drawable/ic_input_get"
                android:title="@string/register" />

            <item
                android:id="@+id/menu_logOut"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logOut"/>

        </menu>
    </item>


</menu>